        <ScrollView
             xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="match_parent"
            android:layout_width="match_parent">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/img"
            android:scaleType="centerCrop"
            tools:context="com.example.android.quizapp.MainActivity">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz"
                android:textAlignment="center"
                android:textSize="50sp"
                android:layout_marginBottom="20dp"/>
            <TextView
                style="@style/questionsStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1" />
            <RadioGroup
                android:id="@+id/radiogp1"
                style="@style/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                android:id="@+id/rb1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/q11"
                />
                <RadioButton
                android:id="@+id/rb2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/q12"
                />
                <RadioButton
                    android:id="@+id/rb3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/q13"
                    />
                <RadioButton
                    android:id="@+id/rb4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/q14"
                />
            </RadioGroup>
            <TextView
                style="@style/questionsStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2" />
            <RadioGroup
                android:id="@+id/radiogp2"
                style="@style/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/q21"
                    />
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/q22"
                    />
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/q23"
                    />
                <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/q24"
                />
            </RadioGroup>
            <TextView
                style="@style/questionsStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3" />
            <CheckBox
                android:id="@+id/cb1"
                style="@style/check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q31"
                />
            <CheckBox
                android:id="@+id/cb2"
                style="@style/check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q32"
                />
            <CheckBox
                android:id="@+id/cb3"
                style="@style/check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q33"
                />
            <CheckBox
                android:id="@+id/cb4"
                style="@style/check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q34"
                />
            <TextView
                style="@style/questionsStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q4" />
            <EditText
                style="@style/text"
                android:id="@+id/wques"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/q41"/>
            <TextView
                style="@style/questionsStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q5" />
            <RadioGroup
                android:id="@+id/radiogp5"
                style="@style/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/q51"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/q52"
                    />
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/q53"
                    />
                <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/q54"
                />
                </RadioGroup>
            <Button
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:onClick="SUBMIT"/>
        </LinearLayout>
        </ScrollView>